[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0823529, 0.0823529, 1 )

[node name="fundo" type="Sprite" parent="."]
modulate = Color( 0.372549, 0.317647, 0.235294, 1 )
scale = Vector2( 16, 8.98438 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 32, 64, 64 )

[node name="Control" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="jogar" type="Button" parent="Control"]
modulate = Color( 0.764706, 1, 0.745098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -18.0
margin_right = -59.0
margin_bottom = 52.0
text = "jogar"
icon = ExtResource( 1 )

[node name="sair" type="Button" parent="Control"]
self_modulate = Color( 1, 0.760784, 0.760784, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 93.0
margin_top = -18.0
margin_right = 202.0
margin_bottom = 52.0
text = "sair"
icon = ExtResource( 1 )

[node name="ajuda" type="Button" parent="Control"]
self_modulate = Color( 0.960784, 0.984314, 0.560784, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 134.0
margin_right = 71.0
margin_bottom = 204.0
text = "ajuda"
icon = ExtResource( 1 )

[node name="titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 21.0
margin_bottom = 14.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 19.8, -4.7 )
text = "DESÇA"
align = 1

[node name="textinho" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -93.0
margin_right = -512.0
margin_bottom = -79.0
rect_scale = Vector2( 2, 2 )
text = "só desce, senão perde"
align = 1

[connection signal="pressed" from="Control/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="Control/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Control/ajuda" to="." method="_on_ajuda_pressed"]
